Optimized database queries

--- a/index.html
+++ b/index.html
@@ -33,3 +33,4 @@ Temporary commit content 208
 Temporary commit content 216
 Temporary commit content 218
 Temporary commit content 228
+Temporary commit content 236
