Updated project documentation

--- a/index.html
+++ b/index.html
@@ -29,3 +29,4 @@ Temporary commit content 102
 Temporary commit content 110
 Temporary commit content 159
 Temporary commit content 186
+Temporary commit content 208
