Optimized database queries

--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@ Temporary commit content 266
 Temporary commit content 278
 Temporary commit content 298
 Temporary commit content 13
+Temporary commit content 20
