Updated README with new features

--- a/index.html
+++ b/index.html
@@ -21,3 +21,4 @@ Temporary commit content 278
 Temporary commit content 298
 Temporary commit content 13
 Temporary commit content 20
+Temporary commit content 55
